--- a/Sass/components/_inputs.scss
+++ b/Sass/components/_inputs.scss
@@ -1,12 +1,6 @@
-
- 
-
-  input {
+input {
     border: none;
     justify-content: center;
     background-color:#EAEAEA;
-    
-    
-    
-    
+    margin: auto;
   }
