--- a/Sass/layouts/_navigation.scss
+++ b/Sass/layouts/_navigation.scss
@@ -1,10 +1,10 @@
 nav {
+    display: flex;
     width: 100%;
-    
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    
     background-color:#EAEAEA;
-    
-   
   }
+
+  
