--- a/Sass/base/_typography.scss
+++ b/Sass/base/_typography.scss
@@ -4,22 +4,20 @@
     line-height: normal;
   }
   
-  :root {
+:root {
     --main-color: #9356DC;
     --main-bg-color: #f2f2f2; 
-
   }
   
-  .section-title {
+.section-title {
     width: 100%;
     font-size: 1.7em;
     font-weight: 700;
-    text-align:center;
-    
+    text-align:center;    
     line-height: 28.13px;   
   }
 
-  .section-title2, .section-title3 {   
+.section-title2, .section-title3 {   
     font-size: 24px;
     font-weight: 700;
     line-height: 28px;
@@ -28,44 +26,33 @@
     padding-left: 20px;
   }
 
-  .main-container {
+.main-container {
     width: 100%;
     margin: 0 auto; 
     max-width: 2000px;
     box-sizing: border-box;
   }
   
-  #footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-  }
   
-  a {
+a {
     color: black;
-    text-decoration: none;
-   
-   
+    text-decoration: none;  
   }
-
-  .lapalette {
-    width: 100%;
-  }
-
-.logopages {
-  display: flex;
-  justify-content:center;
-  align-items:center;
-  width:100%;
-}
  
 ul {
-  text-decoration: none;
-  padding: 0;
-  list-style-type: none;
-  
-} 
+    text-decoration: none;
+    padding: 0;
+    list-style-type: none;
+  } 
+
+b {    
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 18.75px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #FFFFFF; 
+  }
 
 
  
