--- a/Sass/components/_butons.scss
+++ b/Sass/components/_butons.scss
@@ -3,61 +3,56 @@
     text-align: left;
     width: 100%;
     padding-left: 5px;
-    
-    
-    
   }
   
-  .searchbutton {
-   display:flex;
-   align-items: center;
-   align-content: center;
-   justify-content: center;
-   text-align: center;
-   border-radius: 25px;
-   background:linear-gradient(#FF79DA, #9356DA);
-   color: var(--White, #fff);
-   font-weight: 500;
-   -webkit-border-radius: 25px;
-   -moz-border-radius: 25px;
-   -ms-border-radius: 25px;
-   -o-border-radius: 25px;
-   box-shadow: 0px 4px 10px 0px #00000040;
-   width: 78%;
-   height: 50px;
-   align-items: center;
-   margin-left:40px;
-   font-size: 16px;
-   font-weight: 500;
-   line-height: 19px;
-   letter-spacing: 0em;
-   border: none;
-   transition: background-color 250ms       ;
-   -webkit-transition: background-color 250ms       ;
-   -moz-transition: background-color 250ms       ;
-   -ms-transition: background-color 250ms       ;
-   -o-transition: background-color 250ms       ;
-}
+.searchbutton {
+    display:flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    text-align: center;
+    border-radius: 25px;
+    background:linear-gradient(#FF79DA, #9356DA);
+    color: var(--White, #fff);
+    font-weight: 500;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    -ms-border-radius: 25px;
+    -o-border-radius: 25px;
+    box-shadow: 0px 4px 10px 0px #00000040;
+    width: 60%;
+    height: 50px;
+    margin-left:40px;
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 0em;
+    border: none;
+    transition: background-color 250ms;
+    -webkit-transition: background-color 250ms;
+    -moz-transition: background-color 250ms;
+    -ms-transition: background-color 250ms;
+    -o-transition: background-color 250ms;
+    margin: auto; 
+  }
 
 .searchbutton a:hover {
-  transition-property: all 2s ;
-  
-  box-shadow: outset 0px 4px 10px 0px #00000040;
-  opacity: 0.8;
-  background-color: brightness(2);
-}
+    border-image-outset: 0px 4px 10px 0px;
+    opacity: 0.8;
+    filter: brightness(2);
+    -webkit-filter:brightness(2);
+  }
 
 .searchbutton a {
-  color: #fff;
-  width: 78%;
- justify-content: center;
- align-items: center;
-  border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
-}
+    color: #fff;
+    width: 78%;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+  }
   
 
  
