--- a/Sass/layouts/_forms.scss
+++ b/Sass/layouts/_forms.scss
@@ -1,8 +1,7 @@
 .search-bar {
     display: flex;
-   
+    margin: auto;
     justify-content: center;
-    padding-left: 50px; 
-   
+    font-size: 16px; 
 }
       
