--- a/Sass/layouts/_header.scss
+++ b/Sass/layouts/_header.scss
@@ -1,14 +1,15 @@
-  #logo {
+#logo {
     display: flex;
     text-align: center;
     justify-content:center;   
     flex-direction:column;
     align-items:center;
-    width: 100%;       
+    width: 50%; 
+    margin:auto;
+    padding: 10px;     
   }  
 
-
-  .sub-title {
+.sub-title {
     text-align: center;
     font-weight: 300;
     width:90% ;
@@ -17,6 +18,7 @@
     line-height: 21px;
     letter-spacing: 0em;
     padding-bottom: 10px;
+    margin: auto;
   }
 
   
