--- a/Sass/layouts/_section.scss
+++ b/Sass/layouts/_section.scss
@@ -35,8 +35,8 @@ body {
 
 .menus {
     background-color:rgba(246, 246, 246, 1);
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 10px;
+    padding-right: 10px;
     padding-top: 30px;
     padding-bottom: 50px;
   }
@@ -308,7 +308,8 @@ body {
   }
 
   .fonctionnement {
-    width: 100%;
+    width: 90%;
+    margin: auto;
   }
 
   .etape {
@@ -321,13 +322,19 @@ body {
     padding-right: 20px;
   }
 
+  .section-title3 {
+    padding-left: 70px;
+  }
+
   .cartes {
     display:flex;
     flex-wrap: wrap;
     justify-content:space-around;
     align-items: center;
+    align-content: center;
     flex-direction: row;
-    width: 100%;
+    width: 90%;    
+    margin: auto;
    
   }
 
@@ -365,13 +372,20 @@ body {
     margin: auto;    
   }
   
-  .menu, .subtitle_lacarte {
+  .menu {
     width: 60%;
     justify-content: center;
     align-items: center;
     margin: auto;
+    
   }
 
+  .subtitle_lacarte {
+    width: 5%;
+   margin-left: 165px;
+   
+    
+  }
   
   
   }
