--- a/Sass/main.css
+++ b/Sass/main.css
@@ -83,7 +83,7 @@ b {
   height: 100%;
 }
 
-.logo_footer {
+.logo_footer, .logo_footer2 {
   font-family: "Shrikhand";
   font-size: 18px;
   font-style: italic;
@@ -94,15 +94,19 @@ b {
   padding-left: 20px;
   margin-top: 0;
   width: 119px;
-  -webkit-filter: invert(110%);
+  -webkit-filter: invert(200%);
+  width: 30%;
+  height: 18px;
 }
 
 footer {
   background: rgb(53, 53, 53);
-  padding-top: 15px;
+  padding-top: 20px;
   padding-bottom: 10px;
   font-size: 18px;
   position: relative;
+  height: auto;
+  margin: auto;
 }
 
 .links {
@@ -115,13 +119,14 @@ footer {
 
 .footer_restaurants {
   background: rgb(53, 53, 53);
-  padding-top: 30px;
+  padding-top: 20px;
   padding-bottom: 10px;
   font-size: 18px;
   position: relative;
   width: 100%;
   height: 42%;
   top: -70px;
+  height: auto;
 }
 
 .footer-title {
@@ -134,16 +139,59 @@ footer {
   height: 13px;
 }
 
-.logofooter-txt, .logofooter-txt2 {
-  margin-left: 10px;
-}
-
 .rotate {
   display: flex;
   justify-content: flex-start;
   margin-left: 0;
 }
 
+@media (min-width: 1024px) and (max-width: 2000px) {
+  .footer_restaurants {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    height: auto;
+  }
+  footer {
+    height: auto;
+  }
+  .links {
+    text-align: center;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    gap: 10px;
+    margin-left: 30px;
+  }
+  .logo_footer {
+    position: relative;
+    left: 88%;
+    top: 25px;
+    height: 18px;
+    width: 8%;
+  }
+  .logo_footer2 {
+    position: relative;
+    left: 88%;
+    bottom: 5px;
+    width: 8%;
+    height: 18px;
+    margin-left: 10px;
+  }
+  .fa-handshake-simple {
+    position: relative;
+    top: 5px;
+  }
+  .fa-utensils {
+    position: relative;
+    bottom: 1px;
+  }
+  .logofooter-txt2 {
+    padding-right: 20px;
+  }
+}
 .search-bar {
   display: flex;
   margin: auto;
@@ -231,8 +279,8 @@ body {
 
 .menus {
   background-color: rgb(246, 246, 246);
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 10px;
+  padding-right: 10px;
   padding-top: 30px;
   padding-bottom: 50px;
 }
@@ -500,7 +548,8 @@ body {
     width: 100%;
   }
   .fonctionnement {
-    width: 100%;
+    width: 90%;
+    margin: auto;
   }
   .etape {
     display: inline-block;
@@ -511,13 +560,18 @@ body {
     padding: 0;
     padding-right: 20px;
   }
+  .section-title3 {
+    padding-left: 70px;
+  }
   .cartes {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
+    align-content: center;
     flex-direction: row;
-    width: 100%;
+    width: 90%;
+    margin: auto;
   }
   .carte, .enchantee, .lapalette {
     display: flex;
@@ -548,11 +602,15 @@ body {
     align-items: center;
     margin: auto;
   }
-  .menu, .subtitle_lacarte {
+  .menu {
     width: 60%;
     justify-content: center;
     align-items: center;
     margin: auto;
+  }
+  .subtitle_lacarte {
+    width: 5%;
+    margin-left: 165px;
   }
 }
 ::-moz-placeholder {
@@ -810,6 +868,8 @@ abbr {
   -moz-transform: rotate(-30deg);
   -ms-transform: rotate(-30deg);
   -o-transform: rotate(-30deg);
+  position: relative;
+  top: 5px;
 }
 
 @media (min-width: 1024px) and (max-width: 2000px) {
@@ -820,6 +880,9 @@ abbr {
     position: relative;
     left: 350px;
     bottom: 60px;
+  }
+  .gris {
+    left: 230px;
   }
 }
 html, body {
